--- a/styles/global.scss
+++ b/styles/global.scss
@@ -11,9 +11,16 @@ body {
   background-size: cover;
 }
 
+#__next {
+  height: 100%;
+}
+
 .page {
+  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
