--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -9,6 +9,18 @@
   justify-content: flex-end;
 }
 
+.loadingScreen {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+
+  color: #fff;
+  font-size: 60px;
+  font-weight: 900;
+}
+
 .heading {
   margin-bottom: 50px;
 
