--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -19,6 +19,10 @@
   color: #fff;
   font-size: 60px;
   font-weight: 900;
+
+  @media screen and (max-width: 620px) {
+    font-size: 40px;
+  }
 }
 
 .heading {
@@ -27,6 +31,24 @@
   font-family: 'Lato', sans-serif;
   font-size: 80px;
   font-weight: 700;
+
+  @media screen and (max-width: 980px) {
+    margin-bottom: 30px;
+
+    font-size: 60px;
+  }
+
+  @media screen and (max-width: 748px) {
+    font-size: 50px;
+  }
+
+  @media screen and (max-width: 620px) {
+    font-size: 34px;
+  }
+
+  @media screen and (max-width: 440px) {
+    font-size: 24px;
+  }
 }
 
 .whiteBlock {
@@ -38,6 +60,33 @@
   border-top-right-radius: 70px;
   border-top-left-radius: 70px;
   background: #fff;
+
+  @media screen and (max-width: 980px) {
+    padding-left: 44px;
+    padding-right: 44px;
+    padding-bottom: 55px;
+  }
+
+  @media screen and (max-width: 748px) {
+    padding: 54px 30px 44px;
+  }
+
+  @media screen and (max-width: 620px) {
+    min-height: 60vh;
+    padding-left: 20px;
+    padding-right: 20px;
+
+    border-top-right-radius: 50px;
+    border-top-left-radius: 50px;
+  }
+
+  @media screen and (max-width: 440px) {
+    padding-top: 44px;
+  }
+
+  @media screen and (max-width: 390px) {
+    padding-top: 64px;
+  }
 }
 
 .error {
@@ -50,8 +99,18 @@
   background: #ff7e7e;
   color: #fff;
   font-size: 18px;
+  line-height: 1.3;
 
   animation: fade 0.3s ease-in-out;
+
+  @media screen and (max-width: 748px) {
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
+
+  @media screen and (max-width: 620px) {
+    font-size: 12px;
+  }
 }
 
 .proposition {
@@ -60,11 +119,29 @@
   font-weight: 600;
   font-size: 22px;
   color: #434343;
+
+  @media screen and (max-width: 748px) {
+    font-size: 18px;
+  }
+
+  @media screen and (max-width: 620px) {
+    margin-bottom: 16px;
+
+    font-size: 14px;
+  }
+
+  @media screen and (max-width: 440px) {
+    font-size: 12px;
+  }
 }
 
 .form {
   display: flex;
   justify-content: space-between;
+
+  @media screen and (max-width: 620px) {
+    flex-direction: column;
+  }
 }
 
 .input {
@@ -76,6 +153,15 @@
 
   border: 1px solid #dfdfdf;
   border-radius: 20px;
+
+  @media screen and (max-width: 748px) {
+    margin-right: 20px;
+  }
+
+  @media screen and (max-width: 620px) {
+    height: 40px;
+    margin-bottom: 16px;
+  }
 
   &:hover {
     input {
@@ -92,6 +178,14 @@
     background: transparent;
 
     transition: all 0.3s ease-in-out;
+
+    @media screen and (max-width: 620px) {
+      padding-left: 20px;
+    }
+
+    @media screen and (max-width: 440px) {
+      font-size: 12px;
+    }
 
     &:disabled {
       opacity: 0.5;
@@ -146,6 +240,10 @@
   &:hover {
     text-decoration: underline;
   }
+
+  @media screen and (max-width: 980px) {
+    font-size: 12px;
+  }
 }
 
 .checkbox {
@@ -153,7 +251,12 @@
   position: relative;
   display: inline-block;
   margin-top: 15px;
+
   cursor: pointer;
+
+  @media screen and (max-width: 748px) {
+    margin-bottom: 40px;
+  }
 
   input {
     display: none;
@@ -162,10 +265,14 @@
   span {
     display: inline-block;
     padding-top: 2px;
-    padding-left: 20px;
+    padding-left: 28px;
 
     color: #212121;
     font-size: 16px;
+
+    @media screen and (max-width: 748px) {
+      font-size: 12px;
+    }
 
     &:hover {
       text-decoration: underline;
@@ -207,10 +314,22 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media screen and (max-width: 620px) {
+    display: none;
+  }
 }
 
 .smile {
   width: 30%;
+
+  @media screen and (max-width: 980px) {
+    width: 24%;
+  }
+
+  @media screen and (max-width: 748px) {
+    width: 28%;
+  }
 }
 
 .icon {
@@ -224,11 +343,25 @@
 
   border-radius: 20px;
   background: linear-gradient(254.31deg, #fdf8b5 3.22%, #4ee1cc 100%);
+
+  @media screen and (max-width: 980px) {
+    max-width: 57px;
+    max-height: 57px;
+    margin-bottom: 16px;
+  }
 }
 
 .caption {
   font-size: 18px;
   line-height: 1.22;
+
+  @media screen and (max-width: 980px) {
+    font-size: 14px;
+  }
+
+  @media screen and (max-width: 748px) {
+    font-size: 12px;
+  }
 }
 
 @keyframes fade {
