--- a/styles/Group.module.scss
+++ b/styles/Group.module.scss
@@ -1,5 +1,5 @@
 .container {
-  height: 100%;
+  min-height: 100vh;
   max-width: 1138px;
   width: 100%;
   margin: 0 auto;
@@ -18,8 +18,7 @@
   width: 100%;
   padding: 80px 52px 70px;
   overflow: hidden;
-  max-height: 90vh;
-  height: 90%;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -27,6 +26,14 @@
   border-top-right-radius: 50px;
   border-top-left-radius: 50px;
   background: #fff;
+
+  @media screen and (max-height: 640px) {
+    overflow: unset;
+    max-height: none;
+    height: auto;
+    padding-bottom: 30px;
+    margin-top: 30px;
+  }
 
   @media screen and (max-width: 920px) {
     padding-left: 30px;
