--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,4 +1,5 @@
 .container {
+  min-height: 100vh;
   margin: 0 auto;
   padding: 0 12px;
   max-width: 1138px;
@@ -15,7 +16,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
 
   color: #fff;
   font-size: 60px;
@@ -27,6 +28,7 @@
 }
 
 .heading {
+  margin-top: 20px;
   margin-bottom: 50px;
 
   font-family: 'Lato', sans-serif;
