--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -104,7 +104,7 @@
   font-size: 18px;
   line-height: 1.3;
 
-  animation: fade 0.3s ease-in-out;
+  animation: fade 5s ease-in-out;
 
   @media screen and (max-width: 748px) {
     padding-top: 12px;
@@ -371,7 +371,10 @@
   0% {
     transform: translateY(-100%);
   }
-  100% {
+  6%, 94% {
     transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-100%);
   }
 }
